0.5.3 (currently working on)
- [#1222] Fix: In the template helper class, provide default values for templateCode and markerNames
- [#1108] Fix: Number of seats in the "my events" view is incorrect for multi-registration events
- [#1096] Fix: Wrong message in configcheck::hideFields()
- [#1097] Fix: Config check warning if sr_feuser_register is not installed
- [#1093] Fix: Problem with the description of speakers in the seminar single view
- [#921] Change: Change all tautology '1's to '1=1' in DB queries to make this extension work with PostgreSQL
- [#458] Fix: Prevent registrations for mere topic records
- [#415] Change: Send "access denied" HTTP headers if access has been denied
- [#1059] Fix: Error with strrpos in the config check
- [#602] Change: In the SQL file, remove NOT NULL from all text and blob fields
- [#366, #669, #802, #1061] Code cleanup
- [#1056] Fix: Teaser text not included in list view search
- [#923] Change: Calculate the vacancies and registration number on the fly

0.5.2 (released 2007-08-05)
- [#1040] Fix: <br /> is displayed on the confirmation page after the selected method of payment
- [#1045] Fix: Use require_once instead of require in mod1/index.php
- [#936] Fix: Empty label tags for the "terms" and "terms_2" checkboxes
- [#1042] Fix: Another PHP error on the registration page
- [#1039] Fix: Error on register attendances

0.5.1 (released 2007-07-29)
- [#1015] Fix: Registration page: Radiobuttons for the payment methods should be vertically arranged
- [#963] Change: Only show the total price on the confirmation page if the "seats" element is enabled
- [#902] Change: Registrations should be counted as references to event records and FE user records
- [#940] Change: Unified the German wording for "special price".
- [#416] Change: Allow commas as decimal separator in prices, too (in the FE editing)
- [#953] Change: Define LF as chr(10) and use that instead of chr(10)